resources/sass/_common.scss
$font-audiowide: Audiowide, $font-family-sans-serif;

body {
    background-image: url('../images/main_bg.webp');
}

h1,
h2 {
    font-family: $font-audiowide;
}

.text-audiowide {
    font-family: $font-audiowide;
}

.text-smallcaps {
    font-variant: small-caps;
}

h2 {
    font-size: $font-size-base * 1.5;
}

.bg-darklight {
    background: $dark-light;
}

.bg-black {
    background: $black;
}

.border-primary-dark {
    border-color: $primary-dark !important;
}

.border-black {
    border-color: $black !important;
}

.striped {
    > * {
        border-bottom: solid 1px $black;

        &:nth-child(even) {
            background: $dark;
        }
        &:nth-child(odd) {
            background: $dark-light;
        }
    }
}

.w-45 {
    width: 45% !important;
}

img.cropped {
    object-fit: cover;
    object-position: top left;
}

img.pixelated {
    // Need both variants for different browsers
    image-rendering: pixelated;
    image-rendering: crisp-edges;
}

.overflow-ellipsis {
    text-overflow: ellipsis;
}

.text-contributor {
    color: #d3006a !important;
}

.container-xxxl {
    max-width: 1920px;
    margin-left: auto;
    margin-right: auto;
}

